# helpapup

./: Dockerfile  README.md  docker-compose.yaml  login_container.sh  pyproject.toml
helpapup/assets/css/: mystyles.css
helpapup/config/: asgi.py  urls.py  wsgi.py
helpapup/config/settings/: base.py
helpapup/templates/: index.html
