[tool.poetry]
name = "helpapup"
version = "0.1.0"
description = "App to show all dogs needing a home near you"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.1"
djangorestframework = "^3.14.0"
Markdown = "^3.5.1"
django-filter = "^23.5"
jwt = "^1.3.1"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
